Fix for bug#15447 Partitions: NULL is treated as zero   NULL value handling